Added the SemanticRules